--- a/Text classification using Ktrain.ipynb
+++ b/Text classification using Ktrain.ipynb
@@ -24,54 +24,17 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>siyaset</td>\n",
-       "      <td>3 milyon ile ön seçim vaadi mhp nin 10 olağan...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>siyaset</td>\n",
-       "      <td>mesut_yılmaz yüce_divan da ceza alabilirdi pr...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "   category                                               text\n",
        "0  siyaset    3 milyon ile ön seçim vaadi mhp nin 10 olağan...\n",
        "1  siyaset    mesut_yılmaz yüce_divan da ceza alabilirdi pr..."
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>category</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>siyaset</td>\n      <td>3 milyon ile ön seçim vaadi mhp nin 10 olağan...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>siyaset</td>\n      <td>mesut_yılmaz yüce_divan da ceza alabilirdi pr...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -84,8 +47,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Total number of records present in dataset: 4900\n"
      ]
@@ -108,11 +71,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Total different category in Datatset:\n",
-      "['siyaset ' 'dunya ' 'ekonomi ' 'kultur ' 'saglik ' 'spor ' 'teknoloji ']\n"
+      "Total different category in Datatset:\n['siyaset ' 'dunya ' 'ekonomi ' 'kultur ' 'saglik ' 'spor ' 'teknoloji ']\n"
      ]
     }
    ],
@@ -137,15 +99,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
-      "[nltk_data] Downloading package words to\n",
-      "[nltk_data]     C:\\Users\\BRAJ\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package words is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\BRAJ\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data] Downloading package words to /home/ubuntu/nltk_data...\n[nltk_data]   Package words is already up-to-date!\n[nltk_data] Downloading package stopwords to /home/ubuntu/nltk_data...\n[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -210,14 +167,14 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(4540, 2)"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
    "source": [
@@ -228,63 +185,33 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We are taking only 25 percent of data from whole dataset to fine tune our model with less time.\n",
+    "dataset = dataset.sample(frac=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category</th>\n",
-       "      <th>text</th>\n",
-       "      <th>cleaned_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>siyaset</td>\n",
-       "      <td>3 milyon ile ön seçim vaadi mhp nin 10 olağan...</td>\n",
-       "      <td>milyon ön seç vaadi mhp nin olağan büyük kurul...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>siyaset</td>\n",
-       "      <td>mesut_yılmaz yüce_divan da ceza alabilirdi pr...</td>\n",
-       "      <td>mesut yılmaz yüç divan ceza alabilir prof dr s...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   category                                               text  \\\n",
-       "0  siyaset    3 milyon ile ön seçim vaadi mhp nin 10 olağan...   \n",
-       "1  siyaset    mesut_yılmaz yüce_divan da ceza alabilirdi pr...   \n",
+       "      category                                               text  \\\n",
+       "1295    dunya    türkiye_nato dan patriot talebinde bulunmadı ...   \n",
+       "1627  ekonomi    internet bankacılığı kullananlar dikkat ! ist...   \n",
        "\n",
-       "                                        cleaned_text  \n",
-       "0  milyon ön seç vaadi mhp nin olağan büyük kurul...  \n",
-       "1  mesut yılmaz yüç divan ceza alabilir prof dr s...  "
-      ]
+       "                                           cleaned_text  \n",
+       "1295  türki nato dan patriot talep bulun nato genel ...  \n",
+       "1627  internet bankacılık kullanan dikkat istanbul b...  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>category</th>\n      <th>text</th>\n      <th>cleaned_text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1295</th>\n      <td>dunya</td>\n      <td>türkiye_nato dan patriot talebinde bulunmadı ...</td>\n      <td>türki nato dan patriot talep bulun nato genel ...</td>\n    </tr>\n    <tr>\n      <th>1627</th>\n      <td>ekonomi</td>\n      <td>internet bankacılığı kullananlar dikkat ! ist...</td>\n      <td>internet bankacılık kullanan dikkat istanbul b...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
@@ -301,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,53 +254,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "preprocessing train...\n",
       "language: tr\n",
       "train sequence lengths:\n",
       "\tmean : 233\n",
-      "\t95percentile : 559\n",
-      "\t99percentile : 896\n"
+      "\t95percentile : 572\n",
+      "\t99percentile : 848\n"
      ]
     },
     {
+     "output_type": "display_data",
      "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "\n    <div>\n        <style>\n            /* Turns off some styling */\n            progress {\n                /* gets rid of default border in Firefox and Opera. */\n                border: none;\n                /* Needs to be in here for Safari polyfill so background images work as expected. */\n                background-size: auto;\n            }\n            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n                background: #F44336;\n            }\n        </style>\n      <progress value='0' class='' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n      \n    </div>\n    \n"
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Is Multi-Label? False\n",
-      "preprocessing test...\n",
-      "language: tr\n",
-      "test sequence lengths:\n",
-      "\tmean : 240\n",
-      "\t95percentile : 601\n",
-      "\t99percentile : 846\n"
+      "Is Multi-Label? False\npreprocessing test...\nlanguage: tr\ntest sequence lengths:\n\tmean : 257\n\t95percentile : 633\n\t99percentile : 1009\n"
      ]
     },
     {
+     "output_type": "display_data",
      "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "\n    <div>\n        <style>\n            /* Turns off some styling */\n            progress {\n                /* gets rid of default border in Firefox and Opera. */\n                border: none;\n                /* Needs to be in here for Safari polyfill so background images work as expected. */\n                background-size: auto;\n            }\n            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n                background: #F44336;\n            }\n        </style>\n      <progress value='0' class='' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n      \n    </div>\n    \n"
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     }
    ],
    "source": [
@@ -388,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,11 +314,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n",
+      "\n",
+      "begin training using onecycle policy with max lr of 5e-05...\n",
+      "Epoch 1/3\n",
+      "46/46 [==============================] - 3925s 85s/step - loss: 1.9401 - accuracy: 0.1537 - val_loss: 1.7807 - val_accuracy: 0.4934\n",
+      "Epoch 2/3\n",
+      "46/46 [==============================] - 3899s 85s/step - loss: 1.4998 - accuracy: 0.6156 - val_loss: 0.6783 - val_accuracy: 0.8546\n",
+      "Epoch 3/3\n",
+      "46/46 [==============================] - 3894s 85s/step - loss: 0.5661 - accuracy: 0.9055 - val_loss: 0.5639 - val_accuracy: 0.8590\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7f0b11551290>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "leaner.fit_onecycle(5e-5, 3) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "leaner.fit_onecycle(5e-5, 2) "
+    "#Saving fine-tuned model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = ktrain.get_predictor(leaner.model, preproc=t)\n",
+    "predictor.save(\"./ktrain/electra_text_classifier\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lets take a sample news\n",
+    "news_text = dataset['cleaned_text'].iloc[10]\n",
+    "actual_category = dataset['category'].iloc[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Actual category is spor \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Actual category is {actual_category}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "predicted category is spor \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"predicted category is {predictor.predict(dataset['cleaned_text'].iloc[10])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reload saved model for prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'spor '"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "reloaded_predictor = ktrain.load_predictor('./ktrain/electra_text_classifier')\n",
+    "reloaded_predictor.predict(dataset['cleaned_text'].iloc[10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "confidence score: 0.8901882767677307\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"confidence score: {np.max(reloaded_predictor.predict_proba(dataset['cleaned_text'].iloc[10]))}\")"
    ]
   },
   {
@@ -414,9 +468,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_dl",
+   "display_name": "venv_dl_vf",
    "language": "python",
-   "name": "env_dl"
+   "name": "venv_dl_vf"
   },
   "language_info": {
    "codemirror_mode": {
